# torecsys

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO.md  dev-testing.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
doc/: conf.py  requirements.txt
doc/source/: conf.py  index.rst  modules.rst  torecsys.data.dataloader.fields.rst  torecsys.data.dataloader.rst  torecsys.data.negsampling.rst  torecsys.data.rst  torecsys.data.subsampling.rst  torecsys.estimators.ctr.rst  torecsys.estimators.emb.rst  torecsys.estimators.ltr.rst  torecsys.estimators.rst  torecsys.inputs.rst  torecsys.layers.ctr.rst  torecsys.layers.ltr.rst  torecsys.layers.rst  torecsys.losses.emb.rst  torecsys.metrics.rst  torecsys.models.ctr.estimators.rst  torecsys.models.ctr.layers.rst  torecsys.models.ctr.rst  torecsys.models.emb.estimators.rst  torecsys.models.emb.layers.rst  torecsys.models.emb.losses.rst  torecsys.models.emb.rst  torecsys.models.inputs.rst  torecsys.models.ltr.estimators.rst  torecsys.models.ltr.layers.rst  torecsys.models.ltr.losses.rst  torecsys.models.ltr.rst  torecsys.models.rst  torecsys.models.utils.rst  torecsys.rst  (+3 more)
docs/: requirements.txt
example/: README.md
test/: test_dataset.py  test_layers.py  test_sampledata.py
tests/: test_dataloader.py  test_dataset.py  test_estimators.py  test_inputs.py  test_layers.py  test_losses.py  test_metrics.py  test_miners.py  test_models.py  test_sampledata.py  test_sampling.py  test_subsampling.py  test_trainer.py
torecsys/: __init__.py  estimators.py  layers.py  losses.py  modules.py
(+258 files in other folders)
