[metadata]
name = torecsys
version = 0.0.1.dev2
license = MIT
author = Jasper Li
author_email = jasper_liwaiyin@protonmail.com
description =
    ToR[e]cSys is a PyTorch Framework to implement recommendation system algorithms,
    including but not limited to click-through-rate (CTR) prediction, learning-to-ranking
    (LTR), and Matrix/Tensor Embedding. The project objective is to develop a ecosystem
    to experiment, share, reproduce, and deploy in real world in a smooth and easy way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/p768lwy3/torecsys
project_urls =
    Bug Tracker = https://github.com/p768lwy3/torecsys/issues
    Documentation = https://torecsys.readthedocs.io/en/latest/
    Source = https://github.com/p768lwy3/torecsys
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = torecsys
